<resources>
    <string name="app_name">BeSafe</string>
    <string name="login">Login</string>
    <string name="login_u"><u>Login</u></string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="new_user">New User?</string>
    <string name="or">OR</string>
    <string name="ok">OK</string>
    <string name="login_succ">Login successful</string>
    <string name="enter_mail_pass">Please enter email and password</string>
    <string name="acc_create">Account Created Successfully</string>
    <string name="data_update">User data updated successfully</string>
    <string name="allow_loc">Please allow location Permission from settings</string>
    <string name="acc_delete">Account deleted successfully</string>
    <string name="some_error">Some error occured</string>
    <string name="mess_sent">Message sent successfully!</string>
    <string name="enable_loc">Enable Location</string>
    <string name="loc_des">This app needs location services to be enabled. Please turn on location services.</string>
    <string name="p_confirm_pass">Please enter your confirm password.</string>
    <string name="same_password">Password and Confirm Password should be same.</string>
    <string name="p_pass">Please enter your password.</string>
    <string name="p_email">Please enter your email.</string>
    <string name="re_email">Password reset email sent</string>
    <string name="p_name">Please enter your name.</string>
    <string name="please_pin">Please enter Safety Pin</string>
    <string name="phone_same">Phone number should be same</string>
    <string name="number_valid">Number Should be valid with +(Country Code)(Number). Example +12345678 format</string>
    <string name="p_username">Please enter user name</string>
    <string name="p_pn">Please enter phone number</string>
    <string name="p_rpn">Please re-enter phone number</string>
    <string name="pin_same">Pin and re-pin should be same.</string>
    <string name="please_first">Please enter first friend phone number</string>
    <string name="please_second">Please enter second friend phone number</string>
    <string name="s_pn">Phone number and re-phone number should be same.</string>
    <string name="subscribe">Subscribe</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome</string>
    <string name="plans">Plans</string>
    <string name="pac_plans">Package Plans</string>
    <string name="delete">Delete Profile</string>
    <string name="alert">Alert</string>
    <string name="logout">Logout</string>
    <string name="activated">Activated</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="pin_safe">Enter your pin if safe</string>
    <string name="pin">Enter PIN</string>
    <string name="type_pin">Type your previous 4 digit pin first if you want to proceed.</string>
    <string name="enter_pin_alert">Enter pin within 10 seconds if you are safe (For Testing)</string>
    <string name="sub_des_2">- After the trial, subscribe for $3.00 /month. The subscription renews automatically.</string>
    <string name="sub_des">- Enjoy a free 1-week trial of BeSafe to experience our security alert features. Send automated messages and your location to chosen contacts during emergencies.</string>
    <string name="monthly_pac">Monthly package</string>
    <string name="price">$3.00 /month</string>
    <string name="text_o">Otherwise we send a safety message to your contacts.</string>
    <string name="release_des">IF YOU RELEASE THE BUTTON, IN 10 SECONDS, AN SMS WILL BE SENT TO YOUR EMERGENCY CONTACTS WITH YOUR LOCATION</string>
    <string name="hold">HOLD\nTO\nACTIVATE</string>
    <string name="enter_first_pn">Enter Your First Friend\nPhone number</string>
    <string name="enter_second_pn">Enter Your Second Friend\nPhone number</string>
    <string name="enter_third_pn">Enter Your Third Friend\nPhone number(optional)</string>
    <string name="enter_fourth_pn">Enter Your Fourth Friend\nPhone number(optional)</string>
    <string name="re_enter_pin">Re-Enter Your Safety\nPin</string>
    <string name="enter_pin">Enter Your Safety Pin</string>
    <string name="re_enter_pn">Re-Enter Your Phone\nnumber</string>
    <string name="enter_username">Enter Your Username</string>
    <string name="enter_pn">Enter Your Phone number</string>
    <string name="continue_google">Continue with Google</string>
    <string name="already_account">Already have an account?</string>
    <string name="remember_password">Remember Password?</string>
    <string name="configuration">Configuration</string>
    <string name="allow_location">Allow Location</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="pro_store">Product is not available on App Store</string>
    <string name="bill_disconnected">Billing Disconnected</string>
    <string name="msg_cancel">Test Alert Message Cancelled Successfully</string>
    <string name="confirm_delete">Are you sure you want to delete this profile?</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot">Forgot Password</string>
    <string name="manage">Manage Subscriptions</string>
    <string name="plan">Subscribe to Plan</string>
    <string name="create_account"><u>Create an account</u></string>
    <string name="create_account2">Create Account</string>
    <string name="rights">FREEFUTURE LDA All rights reserved, 2024</string>
    <string name="policy">Using SAFE\'s service you agree with <u>Policy</u> and <u>Terms Of Use.</u> </string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="not_subs">Your subscription is not active. please check your subscription status to continue accessing premium features.</string>
    <string name="welcome_text">Welcome! Your free 1-week trial of our BeSafe Alert Service is active. Discover all the premium features, including sending security alert with your location co-ordinates to your emergency contacts. After the trial,continue enjoy uninterrupted access with our monthly package plan, a monthly subscription of $3.00, which automatically renews each month.</string>
    <string name="default_web_client_id">663430630406-2jc78k8g7eq128ldm7u5ngg70vu0md1p.apps.googleusercontent.com</string>
</resources>