<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvAlertTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/tvAlertMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12ssp"
        android:gravity="center"
        android:text="@string/type_pin"
        android:paddingBottom="8dp"/>

    <EditText
        android:id="@+id/etPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/pin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        android:paddingTop="16dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_5sdp"
            android:backgroundTint="@color/blue"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            android:text="@string/ok"/>
    </LinearLayout>

</LinearLayout>
