<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.SubscriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingBottom="@dimen/_20sdp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/white"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15ssp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingEnd="@dimen/_15sdp"
                android:textColor="@color/white"
                android:text="@string/plans"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/logo_safe"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/monthly_pac"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_15ssp"
                android:text="@string/price"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sub_des"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/sub_des_2"/>
        </LinearLayout>


        <TextView
            android:id="@+id/manage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/manage"
            android:textColor="@color/blue"
            android:textSize="@dimen/_15ssp"
            android:elevation="@dimen/_2sdp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:background="@drawable/round_view"/>

        <TextView
            android:id="@+id/plan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/plan"
            android:textColor="@color/blue"
            android:textSize="@dimen/_15ssp"
            android:elevation="@dimen/_2sdp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/round_view"/>

    </LinearLayout>



</LinearLayout>