<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/_30sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/white"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold"
                android:text="@string/login"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_login"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/round_edit_text"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                app:layout_constraintTop_toBottomOf="@+id/email"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/round_edit_text"/>

            <Switch
                android:id="@+id/remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textSize="@dimen/_12ssp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintStart_toEndOf="@+id/remember_me"/>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textSize="@dimen/_15ssp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="@dimen/_15ssp"
                android:elevation="@dimen/_2sdp"
                android:gravity="center"
                android:background="@drawable/round_view"
                app:layout_constraintTop_toBottomOf="@+id/remember_me"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_new_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                app:layout_constraintTop_toBottomOf="@+id/login">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:text="@string/new_user"/>
                <TextView
                    android:id="@+id/create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15ssp"
                    android:text="@string/create_account"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txt_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layout_new_user"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="@dimen/_15ssp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:text="@string/or"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/round_view"
                android:layout_marginEnd="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintTop_toBottomOf="@+id/txt_ok">

                <ImageView
                    android:id="@+id/img_google"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/login_google"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/img_google"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@color/blue"
                    android:text="@string/continue_google"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/policy"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/google"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/rights"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rights"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/policy"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:gravity="center"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>