<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/logo_safe"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                android:gravity="center"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/not_subs"/>

        </LinearLayout>


        <TextView
            android:id="@+id/subscribe"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/subscribe"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:elevation="@dimen/_2sdp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:background="@drawable/round_view"/>

        <TextView
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:elevation="@dimen/_2sdp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/round_view"/>

    </LinearLayout>

</LinearLayout>